// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelInfo Renders Model information 1`] = `
<Fragment>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Type
    </dt>
    <dd
      className="value_f1d9lp3k"
    >
      neural network
    </dd>
  </div>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Hyperparameters
    </dt>
    <dd
      className="value_f1d9lp3k flexColumn_fr3ikkd"
    >
      <span
        key="0"
      >
        early_stop: true
      </span>
      <span
        key="1"
      >
        layers: 10,3,1
      </span>
      <span
        key="2"
      >
        learning_rate: 0.5
      </span>
    </dd>
  </div>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Training data
    </dt>
    <dd
      className="value_f1d9lp3k"
    >
      gs://my-bucket/mnist
    </dd>
  </div>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Training framework
    </dt>
    <dd
      className="value_f1d9lp3k"
    >
      tensorflow
                   v1.0
    </dd>
  </div>
</Fragment>
`;

exports[`ModelInfo Renders Model information with malformed __ALL_META__ property 1`] = `
<Fragment>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Type
    </dt>
    <dd
      className="value_f1d9lp3k"
    />
  </div>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Hyperparameters
    </dt>
    <dd
      className="value_f1d9lp3k flexColumn_fr3ikkd"
    />
  </div>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Training data
    </dt>
    <dd
      className="value_f1d9lp3k"
    >
      gs://my-bucket/mnist
    </dd>
  </div>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Training framework
    </dt>
    <dd
      className="value_f1d9lp3k"
    />
  </div>
</Fragment>
`;

exports[`ModelInfo Renders Model information with missing __ALL_META__ property 1`] = `
<Fragment>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Type
    </dt>
    <dd
      className="value_f1d9lp3k"
    />
  </div>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Hyperparameters
    </dt>
    <dd
      className="value_f1d9lp3k flexColumn_fr3ikkd"
    />
  </div>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Training data
    </dt>
    <dd
      className="value_f1d9lp3k"
    >
      gs://my-bucket/mnist
    </dd>
  </div>
  <div
    className="field_f1bgv1eo"
  >
    <dt
      className="term_fuqr2el"
    >
      Training framework
    </dt>
    <dd
      className="value_f1d9lp3k"
    />
  </div>
</Fragment>
`;
